Exams/Exam02/2-0-swap_bits.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e2r6p1.42.fr
Darwin 16.7.0 x86_64
$> date
Fri Mar  2 14:57:20 CET 2018
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.38)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.38)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/bootcamp-joburg-exam-02/exam_20180302/dkolev

= Git history ==================================================================
$> git -C /var/folders/_w/60n6339904n4ywgsbz4ggns40000gq/T/tmpWGfkBI/user log --pretty='%H - %an, %ad : %s'
15a8a7d0f5aa1fe27767396fea7c3379080b7725 - Exam 42, Fri Mar 2 15:57:08 2018 +0200 : Assignment 2 attempt 1
fd7372f0fd00714bbab8ec153aac9bbb2accac3e - Exam 42, Fri Mar 2 15:28:18 2018 +0200 : Assignment 1
99aaee55df5d499f61963f92cc0bf49b0d19f319 - Exam 42, Fri Mar 2 15:04:56 2018 +0200 : Assignment 0
 
= Collected files ==========================================
$> ls -lAR /var/folders/_w/60n6339904n4ywgsbz4ggns40000gq/T/tmpWGfkBI/user
total 8
-rw-r--r--  1 deepthought  deepthought  740 Mar  2 14:57 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Mar  2 14:57 only_z
drwxr-xr-x  3 deepthought  deepthought  102 Mar  2 14:57 search_and_replace
drwxr-xr-x  3 deepthought  deepthought  102 Mar  2 14:57 swap_bits

/var/folders/_w/60n6339904n4ywgsbz4ggns40000gq/T/tmpWGfkBI/user/only_z:
total 8
-rw-r--r--  1 deepthought  deepthought  965 Mar  2 14:57 only_z.c

/var/folders/_w/60n6339904n4ywgsbz4ggns40000gq/T/tmpWGfkBI/user/search_and_replace:
total 8
-rw-r--r--  1 deepthought  deepthought  1572 Mar  2 14:57 search_and_replace.c

/var/folders/_w/60n6339904n4ywgsbz4ggns40000gq/T/tmpWGfkBI/user/swap_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1245 Mar  2 14:57 swap_bits.c
 
= swap_bits ====================================================================
$> clang -Wextra -Wall -Werror main.c swap_bits.c -o user_exe 
swap_bits.c:29:9: error: incompatible pointer to integer conversion returning 'int [10]' from a function with result type 'unsigned char' [-Werror,-Wint-conversion]
        return (array);
               ^~~~~~~
swap_bits.c:39:2: error: use of undeclared identifier 'w'
        w = swap_bits(c);
        ^
swap_bits.c:42:16: error: use of undeclared identifier 'w'
                printf("%c", w);
                             ^
3 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
